[package]
name = "clock-tree-solver"
version = "0.1.0"
authors = ["xd009642 <danielmckenna93@gmail.com>"]
edition = "2018"

[lib]
name = "clock_solver"
path = "src/lib.rs"

[[bin]]
name = "clock-tree-solver"
path = "src/bin/clock_tree_solver.rs"

[dependencies]
gtk = { version = "^0.5.0" }
petgraph = {version = "0.4", features = ["serde-1"]}
relm = { version = "^0.15.0" }
relm-derive = { version = "^0.15.0" }
serde = "1.0"
serde_derive = "1.0"
uom = { version = "0.20", features = ["use_serde"]}

